Minor tweaks for desktop environments

--- a/Arch system files/etc/pacman.conf
+++ b/Arch system files/etc/pacman.conf
@@ -10,6 +10,7 @@ CacheDir = /home/custompkg/
 HoldPkg = pacman glibc
 Architecture = auto
 CheckSpace
+CleanMethod = KeepCurrent KeepInstalled
 Include = /etc/pacman.d/fonts
 
 SigLevel = Required DatabaseOptional
@@ -31,7 +32,6 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
-#[custom]
-#SigLevel = Optional TrustAll
-#SigLevel = Never
-#Server = file:///home/custompkg
+[custom]
+SigLevel = Optional TrustAll
+Server = file:///home/custompkg
