Brewfile: Adjust fonts

--- a/macOS resources/Brewfile
+++ b/macOS resources/Brewfile
@@ -38,28 +38,29 @@ tap 'homebrew/cask-fonts'
   # Standard Monospace Fonts
   brew 'font-cascadia-code'
   brew 'font-fantasque-sans-mono'
-  #brew 'font-fantasque-sans-mono-noloopk'  # lowercase k without loop
-  brew 'font-fira-code'
-  brew 'font-hack'
+  # brew 'font-fantasque-sans-mono-noloopk'  # lowercase k without loop
+  # brew 'font-fira-code'
+  # brew 'font-hack'
   brew 'font-ibm-plex-mono'
   brew 'font-iosevka'
   brew 'font-jetbrains-mono'
-  brew 'font-meslo-lg'
-  #brew 'font-meslo-lg-dz'  # dotted zero
+  # brew 'font-meslo-lg'
+  # brew 'font-meslo-lg-dz'  # dotted zero
   brew 'font-roboto-mono'
   brew 'font-source-code-pro'
 
   # NERD Monospace Fonts
-  brew 'font-blex-mono-nerd-font'
-  brew 'font-fantasque-sans-mono-nerd-font'
-  brew 'font-fira-code-nerd-font'
-  brew 'font-hack-nerd-font'
-  brew 'font-iosevka-nerd-font'
-  brew 'font-meslo-lg-nerd-font'
-  brew 'font-roboto-mono-nerd-font'
-  brew 'font-sauce-code-pro-nerd-font'
+  # brew 'font-blex-mono-nerd-font'
+  # brew 'font-fantasque-sans-mono-nerd-font'
+  # brew 'font-fira-code-nerd-font'
+  # brew 'font-hack-nerd-font'
+  # brew 'font-iosevka-nerd-font'
+  # brew 'font-meslo-lg-nerd-font'
+  # brew 'font-roboto-mono-nerd-font'
+  # brew 'font-sauce-code-pro-nerd-font'
 
   # Variable Fonts
+  brew 'svn'  # Needed to install font-source-sans-pro
   brew 'font-source-sans-pro'
 
 
