--- a/macOS resources/Brewfile
+++ b/macOS resources/Brewfile
@@ -36,18 +36,21 @@ brew 'emacs-mac --with-modules'
 tap 'homebrew/cask-fonts'
 
   # Standard Monospace Fonts
-  brew 'font-cascadia-code'
+  # brew 'font-cascadia-code'
   brew 'font-fantasque-sans-mono'
   # brew 'font-fantasque-sans-mono-noloopk'  # lowercase k without loop
   # brew 'font-fira-code'
   # brew 'font-hack'
   brew 'font-ibm-plex-mono'
   brew 'font-iosevka'
+  brew 'font-iosevka-slab'
   brew 'font-jetbrains-mono'
   # brew 'font-meslo-lg'
   # brew 'font-meslo-lg-dz'  # dotted zero
+  # brew 'font-pt-mono'  # Included with macOS
   brew 'font-roboto-mono'
   brew 'font-source-code-pro'
+  brew 'font-victor-mono'
 
   # NERD Monospace Fonts
   # brew 'font-blex-mono-nerd-font'
