--- a/bat/.config/bat/config
+++ b/bat/.config/bat/config
@@ -7,7 +7,8 @@
 # Highlighting theme
 # Run `bat --list-themes` for a list of all available themes
 # Try Nord, OneHalfDark or TwoDark
---theme="TwoDark"
+# Try `ansi` or `base16` for a decent match to your current terminal theme
+--theme="Nord"
 
 # Use italic text
 # This is not supported by all terminal emulators
