Kitty: Add everforest_dark_hard theme

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,15 +4,22 @@ bold_font        IBM Plex Mono SemiBold
 italic_font      IBM Plex Mono Italic
 bold_italic_font IBM Plex Mono SemiBold Italic
 font_size 14.0
-modify_font cell_height 120%
+modify_font cell_height 125%
+modify_font cell_width 95%
 
 # Color Scheme
-# include myScheme.conf
+# Everforest Dark Hard
+include themes/everforest_dark_hard.conf
 
 # Window Layout
 remember_window_size no
 initial_window_width 124c
-initial_window_height 1200
+initial_window_height 1350
+window_padding_width 4 6
+
+# Tab Bar
+tab_bar_edge top
+tab_bar_style slant
 
 # OS-Specific Tweaks
 macos_option_as_alt left
