Kitty: Customize everforest_dark_hard theme

--- a/kitty/.config/kitty/themes/everforest_dark_hard.conf
+++ b/kitty/.config/kitty/themes/everforest_dark_hard.conf
@@ -3,6 +3,7 @@
 ## author: Sainnhe Park
 ## license: MIT
 ## upstream: https://github.com/ewal/kitty-everforest/blob/master/themes/everforest_dark_hard.conf
+## modifed from commit: 97ebcc2 on Aug 3, 2022
 ## blurb: A green based color scheme designed to be warm and soft
 
 foreground                      #d3c6aa
@@ -21,7 +22,7 @@ bell_border_color               #e69875
 visual_bell_color               none
 
 wayland_titlebar_color          system
-macos_titlebar_color            system
+macos_titlebar_color            background
 
 active_tab_background           #2b3339
 active_tab_foreground           #d3c6aa
