Git: Use Neovim as diff and merge tool

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -11,3 +11,9 @@ autocrlf = input  # Convert CRLF line endings to LF on commit
 
 [init]
 defaultBranch = main
+
+[diff]
+tool = nvimdiff
+
+[merge]
+tool = nvimdiff
