Starship: Write powerline-style status line

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,6 +6,7 @@ bold_italic_font IBM Plex Mono SemiBold Italic
 font_size 14.0
 modify_font cell_height 125%
 modify_font cell_width 95%
+symbol_map U+FA9E Symbols Nerd Font
 
 # Color Scheme
 # Everforest Dark Hard
