--- a/starship/.config/starship/powerline.toml
+++ b/starship/.config/starship/powerline.toml
@@ -40,9 +40,9 @@ style = "fg:black bg:purple bold"
 format = "[](fg:#2b3339 bg:purple)[ $branch(:$remote_branch)]($style)"
 
 [git_status]
-up_to_date = ""
-style = "fg:black bg:red bold"
-format = "[▌](fg:purple bg:red)[$all_status$ahead_behind ]($style)[](fg:red)"
+# up_to_date = ""
+style = "fg:black bg:purple bold"
+format = "[:$all_status$ahead_behind ]($style)[](fg:purple)"
 
 [character]
 success_symbol = "[ ](fg:#2b3339 bg:cyan)[](fg:cyan)"
