--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,3 +1,5 @@
+# Dotbot configuration
+
 - defaults:
     link:
       relink: true
@@ -10,3 +12,4 @@
 
 - link:
     ~/.config/bat: bat
+    ~/.config/starship: starship
