--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,6 +16,7 @@
     ~/.config/bat: bat
     ~/.config/git: git
     ~/.config/ideavim/ideavimrc: ideavimrc
+    ~/.config/karabiner/karabiner.json: karabiner.json
     ~/.config/kitty: kitty
     ~/.config/nvim: neovim
     ~/.config/starship: starship
