Kitty: Correct Everforest Dark theme

--- a/kitty/themes/everforest_dark_hard.conf
+++ b/kitty/themes/everforest_dark_hard.conf
@@ -7,7 +7,7 @@
 ## blurb: A green based color scheme designed to be warm and soft
 
 foreground                      #d3c6aa
-background                      #2b3339
+background                      #272e33
 selection_foreground            #9da9a0
 selection_background            #503946
 
