Add Haskell (GHCi) config
* Set prompt to "λ> "
* Use Vi bindings, keeping some useful Emacs bindings
* Add simple "auto-pair" functionality

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,6 +19,8 @@
     ~/.config/kitty: kitty
     ~/.config/nvim: neovim
     ~/.config/starship: starship
+    ~/.ghci: haskell/ghci
+    ~/.haskeline: haskell/haskeline
     ~/.vim/after: vim/after
     ~/.vim/spell: vim/spell
     ~/.vim/vimrc: vim/vimrc
