Kitty and Neovim: Appearance tweaks

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -25,12 +25,14 @@ initial_window_height 1350
 window_padding_width 4 6
 
 # Tab Bar
-tab_bar_edge top
-tab_bar_style slant
+tab_bar_edge bottom
+tab_bar_style powerline
+tab_powerline_style slanted
 
 # OS-Specific Tweaks
 macos_option_as_alt left
 macos_quit_when_last_window_closed yes
+macos_show_window_title_in none
 
 # Other Settings
 cursor_blink_interval 0
