Zsh: Start terminals in the Development folder

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,12 +4,6 @@ bold_font        BlexMono Nerd Font SemiBold
 italic_font      BlexMono Nerd Font Italic
 bold_italic_font BlexMono Nerd Font SemiBold Italic
 
-# font_family      IBM Plex Mono Regular
-# bold_font        IBM Plex Mono SemiBold
-# italic_font      IBM Plex Mono Italic
-# bold_italic_font IBM Plex Mono SemiBold Italic
-# symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E6AA,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF,U+F0001-U+F1AF0 Symbols Nerd Font Mono
-
 font_size 14.0
 modify_font cell_height 125%
 modify_font cell_width 95%
@@ -37,3 +31,4 @@ macos_show_window_title_in none
 cursor_blink_interval 0
 enable_audio_bell no
 visual_bell_duration 0.5
+url_style straight
