Add Rust (Rustfmt)

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,6 +24,7 @@
     ~/.vim/after: vim/after
     ~/.vim/spell: vim/spell
     ~/.vim/vimrc: vim/vimrc
+    ~/Library/Application Support/rustfmt/rustfmt.toml: rust/rustfmt.toml
     ~/Library/Application Support/Code/User/settings.json: vscode/settings.json
     ~/.zshrc: zshrc
 
