--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,8 @@
 # Fonts
-font_family      BlexMono Nerd Font Regular
-bold_font        BlexMono Nerd Font SemiBold
-italic_font      BlexMono Nerd Font Italic
-bold_italic_font BlexMono Nerd Font SemiBold Italic
+font_family      family="IBM Plex Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 font_size 14.0
 modify_font cell_height 125%
