--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -32,3 +32,6 @@ cursor_blink_interval 0
 enable_audio_bell no
 visual_bell_duration 0.5
 url_style straight
+
+# Default startup session
+startup_session ~/.config/kitty/default.session
