--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -26,8 +26,9 @@
     ~/.vim/vimrc: vim/vimrc
     ~/.wezterm.lua: wezterm/wezterm.lua
     ~/.zshrc: zshrc
-    ~/Library/Application Support/rustfmt/rustfmt.toml: rust/rustfmt.toml
     ~/Library/Application Support/Code/User/settings.json: vscode/settings.json
+    ~/Library/Application Support/lazygit/config.yml: lazygit.yml
+    ~/Library/Application Support/rustfmt/rustfmt.toml: rust/rustfmt.toml
 
 - create:
     - ~/.config/ideavim
